--- a/frontend/src/components/layout/Footer/Footer.css
+++ b/frontend/src/components/layout/Footer/Footer.css
@@ -3,7 +3,9 @@
     justify-content: space-evenly;
     align-items: center;
     font-family: "Montserrat";
+    /* color: white; */
     font-weight: 600;
+    /* background-color: rgb(34, 33, 33); */
 }
 
 .leftFooter {
@@ -28,4 +30,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.rightFooter > a {
+    text-decoration: none;
+    cursor: pointer;
+    /* color: white; */
 }
