--- a/frontend/src/components/layout/Footer/Footer.css
+++ b/frontend/src/components/layout/Footer/Footer.css
@@ -5,7 +5,7 @@
     margin-top: 9vmax;
     color: white;
     font-weight: 600;
-    background-color: rgb(34, 33, 33);
+    background-color: #393E46;
 }
 
 .leftFooter {
