home section layout and UI changes

--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -56,6 +56,7 @@
     font-size: 1.5vmax;
     border-bottom: 1px solid rgba(21, 21, 21, 0.5);
     width: 20vmax;
+    text-align: center;
     padding: 1vmax;
     margin: 5vmax auto;
     color: #393E46;
