added more styling, better UI

--- a/frontend/src/components/Product/ProductDetails.css
+++ b/frontend/src/components/Product/ProductDetails.css
@@ -29,3 +29,96 @@
 .carouselImage {
     width: 20vmax;
 } 
+
+.detailsBlock_1 > h2 {
+    color: #222831;
+    font: 600 2vmax "Montserrat";
+}
+  
+.detailsBlock_2 {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+  
+.detailsBlock_2_span {
+    font: 600 1.1vmax "Montserrat";
+    padding-left: 0.25vmax;
+    color: rgba(0, 0, 0, 0.699) ;
+}
+  
+.detailsBlock_3 {
+    width: 70%;
+}
+  
+.detailsBlock_3 > h1 {
+    color: rgba(17, 17, 17, 0.795);
+    font: 700 1.8vmax "Montserrat";
+    margin: 1vmax 0;
+}
+
+.detailsBlock_3_1 {
+    display: flex;
+    align-items: center;
+}
+  
+.detailsBlock_3_1_1 > button {
+    border: none;
+    background-color: rgba(0, 0, 0, 0.616);
+    padding: 0.4vmax;
+    cursor: pointer;
+    color: white;
+    transition: all 0.5s;
+}
+
+.detailsBlock_3_1_1 > button:hover {
+    background-color: rgba(0, 0, 0, 0.767);
+}
+  
+.detailsBlock_3_1_1 > input {
+    border: none;
+    padding: 1vmax;
+    width: 1vmax;
+    text-align: center;
+    outline: none;
+    font: 400 0.8vmax "Roboto";
+    color: rgba(0, 0, 0, 0.74);
+}
+  
+.detailsBlock_3_1 > button:last-child {
+    border: none;
+    cursor: pointer;
+    color: #EDEDED;
+    transition: all 0.5s;
+    background-color: #DA0037;
+    font: 600 1vmax "Montserrat";
+    border-radius: 20px;
+    padding: 0.5vmax 2vmax;
+    margin: 1vmax;
+    outline: none;
+}
+  
+.detailsBlock_3_1 > button:last-child:hover {
+    background-color: #444444;
+}
+  
+.detailsBlock_3 > p {
+    border-top: 1px solid rgba(0, 0, 0, 0.205);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.205);
+    padding: 1vmax 0;
+    color: rgba(0, 0, 0, 0.651);
+    font: 600 1vmax "Montserrat";
+    margin: 0.75vmax 0;
+}
+  
+.detailsBlock_4 {
+    color: rgba(0, 0, 0, 0.897);
+    font: 700 1.2vmax "Montserrat";
+}
+  
+.detailsBlock_4 > p {
+    color: #444444;
+    padding-top: 0.75vmax;
+    padding-bottom: 0.75vmax;
+    font: 600 1vmax "Montserrat";
+}
