--- a/frontend/src/components/Product/ProductDetails.css
+++ b/frontend/src/components/Product/ProductDetails.css
@@ -113,6 +113,7 @@
   
 .detailsBlock_4 {
     color: rgba(0, 0, 0, 0.897);
+    text-align: center;
     font: 700 1.2vmax "Montserrat";
 }
   
@@ -121,4 +122,35 @@
     padding-top: 0.75vmax;
     padding-bottom: 0.75vmax;
     font: 600 1vmax "Montserrat";
+}
+
+.submitReview {
+    border: none;
+    cursor: pointer;
+    color: #EDEDED;
+    transition: all 0.5s;
+    background-color: #DA0037;
+    font: 600 1vmax "Montserrat";
+    border-radius: 20px;
+    padding: 0.5vmax 2vmax;
+    margin: 1vmax;
+    outline: none;
+}
+
+.submitReview:hover {
+    background-color: #444444;
+    transform: scale(1.1);
+}
+
+.reviewsHeading {
+    text-align: center;
+    font-family: "Montserrat";
+    font-size: 2.5vmax;
+    margin-top: 0.5vmax;
+}
+
+.reviews {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
