price slider styling

--- a/frontend/src/components/Product/Products.css
+++ b/frontend/src/components/Product/Products.css
@@ -65,3 +65,13 @@
 .pageLinkActive {
     color: white;
 }
+
+.filterBox {
+    width: 15vmax;
+    position: absolute;
+    text-align: center;
+    top: calc(50%);
+    right: -4vmax;
+    transform: rotate(90deg);
+}
+  
