minor UI changes, responsive

--- a/frontend/src/components/Product/ProductDetails.css
+++ b/frontend/src/components/Product/ProductDetails.css
@@ -82,7 +82,7 @@
     width: 1vmax;
     text-align: center;
     outline: none;
-    font: 400 0.8vmax "Roboto";
+    font: 600 1vmax "Montserrat";
     color: rgba(0, 0, 0, 0.74);
 }
   
