--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 .banner {
-    background: linear-gradient(to right, #222831, #393E46);
+    background: url("https://cdn.pixabay.com/photo/2017/01/22/12/07/imac-1999636_960_720.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -18,7 +18,7 @@
 }
   
 .banner > p {
-    font: 300 1.8vmax "Montserrat";
+    font: 500 1.8vmax "Montserrat";
 }
   
 .banner > a > button {
