--- a/frontend/src/components/Home/Product.css
+++ b/frontend/src/components/Home/Product.css
@@ -9,7 +9,7 @@
     transition: all 0.5s;
     padding-bottom: 0.5vmax;
     justify-content: space-between;
-    text-align: center;
+    align-items: center;
 }
 
 span {
